[gd_scene load_steps=11 format=3 uid="uid://c875ttveynj0y"]

[ext_resource type="Texture2D" uid="uid://dccdljfr40j4r" path="res://assets/brackeys_platformer_assets/sprites/platforms.png" id="1_a2wee"]
[ext_resource type="Script" path="res://scripts/dissapearingPlatform.gd" id="1_yq42q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45vdb"]
size = Vector2(32, 7)

[sub_resource type="Curve" id="Curve_1l8uo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.906591, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s7g0"]
size = Vector2(32, 8)

[sub_resource type="Animation" id="Animation_sgtco"]
resource_name = "shake"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platformSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0593129, 0.120344, 0.180141, 0.241171, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, -1), Vector2(-0.5, 1), Vector2(-0.8, -1), Vector2(0.4, -0.7), Vector2(1, -0.5)]
}

[sub_resource type="Animation" id="Animation_xm5l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platformSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("platformSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("platformSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("playerDetectionArea/playerDetectionCollider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q2mi6"]
resource_name = "dropPlatform"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("platformSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 120)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("platformSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 0,
"values": [0.0, 2.56738]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("platformSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("playerDetectionArea/playerDetectionCollider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wxnyj"]
resource_name = "respawn"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"resetPlatform"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("platformSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("platformSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("platformSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_av7x7"]
_data = {
"RESET": SubResource("Animation_xm5l5"),
"dropPlatform": SubResource("Animation_q2mi6"),
"respawn": SubResource("Animation_wxnyj"),
"shake": SubResource("Animation_sgtco")
}

[node name="dissapearing platform" type="Node2D"]
script = ExtResource("1_yq42q")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_45vdb")
one_way_collision = true

[node name="platformSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_a2wee")
region_enabled = true
region_rect = Rect2(16, 0, 32, 9)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 4)
emitting = false
amount = 50
lifetime = 0.7
one_shot = true
explosiveness = 0.6
emission_shape = 3
emission_rect_extents = Vector2(15, 0.1)
direction = Vector2(0, 1)
spread = 17.58
initial_velocity_min = 80.46
initial_velocity_max = 80.46
angle_max = 496.6
scale_amount_curve = SubResource("Curve_1l8uo")
color = Color(0.584472, 0.408815, 0, 1)

[node name="playerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="playerDetectionCollider" type="CollisionShape2D" parent="playerDetectionArea"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_3s7g0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_av7x7")
}
autoplay = "RESET"

[node name="ShakeDurration" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="respawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="playerDetectionArea" to="." method="_on_player_detection_area_area_entered"]
[connection signal="body_entered" from="playerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="timeout" from="ShakeDurration" to="." method="_on_shake_durration_timeout"]
[connection signal="timeout" from="respawnTimer" to="." method="_on_respawn_timer_timeout"]
